--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -507,6 +507,118 @@ div.puzzle-container[size="6"] div.number-select-container button {
     font-size: 1.5em;
   }
 }
+div.puzzle-container.instructions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2em;
+}
+div.puzzle-container.instructions div.saving-indicator {
+  padding-left: 1em;
+  width: 15em;
+  text-align: left;
+  margin-bottom: 0.3em;
+  color: #888;
+}
+@media (max-width: 420px) {
+  div.puzzle-container.instructions div.saving-indicator {
+    width: 11.25em;
+    font-size: 0.7em;
+    padding-left: 1em;
+  }
+}
+div.puzzle-container.instructions div.grid-container {
+  display: grid;
+  height: 15em;
+  width: 15em;
+  gap: 1px;
+  background-color: black;
+  border: solid 3px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+@media (max-width: 420px) {
+  div.puzzle-container.instructions div.grid-container {
+    height: 7.5em;
+    width: 7.5em;
+  }
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square {
+  position: relative;
+  background-color: white;
+  box-sizing: border-box;
+  padding: 0.5em;
+  border: solid 2px;
+  cursor: pointer;
+}
+@media (max-width: 420px) {
+  div.puzzle-container.instructions div.grid-container div.calcudoku-square {
+    border: solid 1px;
+  }
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square.active {
+  background-color: #e5e5e5;
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square.n-up {
+  border-top: none;
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square.n-down {
+  border-bottom: none;
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square.n-right {
+  border-right: none;
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square.n-left {
+  border-left: none;
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square div.cage-indicator {
+  position: absolute;
+  top: 0.2em;
+  left: 0.2em;
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square input {
+  border: none;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  font-size: 2em;
+  text-align: right;
+  cursor: pointer;
+}
+@media (max-width: 420px) {
+  div.puzzle-container.instructions div.grid-container div.calcudoku-square input {
+    font-size: 2em;
+  }
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square input::-webkit-inner-spin-button, div.puzzle-container.instructions div.grid-container div.calcudoku-square input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+div.puzzle-container.instructions div.grid-container div.calcudoku-square input:focus {
+  outline: none;
+}
+div.puzzle-container.instructions div.number-select-container {
+  width: 15em;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1em;
+  box-sizing: border-box;
+}
+@media (max-width: 420px) {
+  div.puzzle-container.instructions div.number-select-container {
+    width: 7.5em;
+  }
+}
+div.puzzle-container.instructions div.number-select-container button {
+  font-size: 3em;
+  padding: 0.15em 0.5em;
+  cursor: pointer;
+}
+@media (max-width: 420px) {
+  div.puzzle-container.instructions div.number-select-container button {
+    font-size: 1.5em;
+  }
+}
 
 div.instance-list-container {
   padding: 2em;
@@ -553,6 +665,32 @@ div.instance-list-container ul li h3 {
 }
 div.instance-list-container ul li div.list-preview {
   margin: 0.5em;
+}
+
+div.calcudoku-instructions {
+  display: flex;
+  flex-direction: column;
+}
+div.calcudoku-instructions button.try-it {
+  margin: 1em;
+  margin-bottom: 0;
+  padding: 0.7em;
+  cursor: pointer;
+  border: none;
+  border-radius: 0.3em;
+  font-size: 1.5em;
+  background-color: #7e6cfb;
+  align-self: center;
+}
+div.calcudoku-instructions button.try-it:focus {
+  outline: none;
+}
+div.calcudoku-instructions button.try-it:hover {
+  margin-top: 0.8em;
+  border-radius: 0.4em;
+  background-color: #ebe8fe;
+  color: #6853fa;
+  border: solid 0.2em #7e6cfb;
 }
 
 div.logic.instance p.puzzle-description {
