added loading indicator

--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -5,6 +5,10 @@
 $base-dimension: 30em;
 $scaling-420px: 1 / 2;
 
+h2.loading-indicator{
+	text-align: center;
+}
+
 @mixin puzzle-container($puzzle-size, $instructionScale) {
 	$puzzle-dimension: $base-dimension * $puzzle-size / 4 * $instructionScale;
 	display: flex;
