--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -171,6 +171,10 @@ div.dashboard-container div.puzzle-list-container ul li div.list-preview {
   margin: 0.5em;
 }
 
+h2.loading-indicator {
+  text-align: center;
+}
+
 div.puzzle-container[size="4"] {
   display: flex;
   flex-direction: column;
