--- a/src/stylesheets/calcudoku.scss
+++ b/src/stylesheets/calcudoku.scss
@@ -5,7 +5,7 @@
 $base-dimension: 30em;
 $scaling-420px: 1 / 2;
 
-h2.loading-indicator{
+h2.loading-indicator {
 	text-align: center;
 }
 
@@ -53,8 +53,21 @@ h2.loading-indicator{
 			}
 			cursor: pointer;
 
+			div.selector {
+				box-sizing: border-box;
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
+
 			&.active {
 				background-color: #e5e5e5;
+
+				input {
+					background-color: #e5e5e5;
+				}
 			}
 			&.n-up {
 				border-top: none;
@@ -80,6 +93,7 @@ h2.loading-indicator{
 				width: 100%;
 				height: 100%;
 				font-size: 4em * $instructionScale;
+				background-color: white;
 				@media (max-width: 420px) {
 					font-size: 4em * $scaling-420px;
 				}
@@ -90,6 +104,7 @@ h2.loading-indicator{
 					-webkit-appearance: none;
 					margin: 0;
 				}
+				-moz-appearance: textfield;
 				&:focus {
 					outline: none;
 				}
