adjusted padding on logout button

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -815,6 +815,7 @@ nav.main-nav button.log-out {
   border-radius: 0.2em;
   color: white;
   cursor: pointer;
+  padding-bottom: 0.2em;
   background-color: #39beca;
 }
 @media (hover: hover) {
