no user select on main nav

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -867,6 +867,7 @@ nav.main-nav svg.back-button {
   width: 2em;
   fill: #39beca;
   cursor: pointer;
+  user-select: none;
 }
 @media (hover: hover) {
   nav.main-nav svg.back-button:hover {
