--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -66,6 +66,7 @@ nav.main-nav {
 		width: 2em;
 		fill: color.adjust(variables.$color10, $lightness: -25);
 		cursor: pointer;
+		user-select: none;
 
 		@media (hover: hover) {
 			&:hover {
