renamed css modules for consistency

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,8 +1,8 @@
 @use "variables";
 @use "sass:color";
-@use "./login";
-@use "./home";
-@use "./calcudoku";
+@use "login";
+@use "home";
+@use "calcudoku";
 @use "logic";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
