added light scss module

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -4,6 +4,7 @@
 @use "home";
 @use "calcudoku";
 @use "logic";
+@use "light";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 
