--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -836,6 +836,31 @@ div.logic.instance div.saving-indicator {
   color: #888;
 }
 
+div.light-puzzle-container div.light-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+div.light-puzzle-container div.light-grid div.grid-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+div.light-puzzle-container div.light-grid div.grid-row div.light-square {
+  height: 4em;
+  width: 4em;
+  margin: 0.5em;
+  border-radius: 1em;
+  cursor: pointer;
+}
+div.light-puzzle-container div.light-grid div.grid-row div.light-square.active {
+  background-color: #0f0;
+}
+div.light-puzzle-container div.light-grid div.grid-row div.light-square.inactive {
+  background-color: #000;
+}
+
 body {
   padding: 1.5em;
   padding-top: 0.5em;
