--- a/src/stylesheets/_light.scss
+++ b/src/stylesheets/_light.scss
@@ -2,6 +2,7 @@
 @use "sass:color";
 
 div.light-puzzle-container {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -63,5 +64,12 @@ div.light-puzzle-container {
 				fill: #ddd;
 			}
 		}
+	}
+
+	div.saving-indicator {
+		position: absolute;
+		bottom: 0;
+		right: 2em;
+		color: #888;
 	}
 }
