--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -894,10 +894,10 @@ div.light-puzzle-container div.controller svg.nav-button[isactive=false] {
   fill: #ddd;
 }
 div.light-puzzle-container div.saving-indicator {
-  position: absolute;
-  bottom: 0;
-  right: 2em;
+  margin-top: -2.7em;
+  padding-left: 20em;
   color: #888;
+  z-index: -1;
 }
 
 body {
