--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -5,6 +5,7 @@
 @use "calcudoku";
 @use "logic";
 @use "light";
+@use "matchstick";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 
